<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bleID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bodyble"
        android:layout_width="match_parent"
        android:layout_height="358dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="0dp"
        tools:background="@color/colorPrimary"
        tools:paddingVertical="5dp">

        <LinearLayout
            android:id="@+id/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameOfObjectId"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:text="@string/nameofobject"
                android:textSize="24sp"
                tools:text="@string/nameofobject"
                tools:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/distanceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:text="@string/distance"
                android:textSize="24sp"
                tools:text="Distance"
                tools:textColor="@android:color/background_light" />

        </LinearLayout>

        <TextView
            android:id="@+id/lastUpdateId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:gravity="right"
            android:text="TextView"
            android:textColor="@android:color/background_light"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_type" />

                <TextView
                    android:id="@+id/typeLabelId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp"
                    tools:text="@string/type" />

                <TextView
                    android:id="@+id/typeId"
                    android:layout_width="227dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textview"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_address" />

                <TextView
                    android:id="@+id/addressLabelId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp"
                    tools:text="@string/address" />

                <TextView
                    android:id="@+id/addressId"
                    android:layout_width="212dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textview"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_link" />

                <TextView
                    android:id="@+id/linkLabelId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/link"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp"
                    tools:text="@string/link" />

                <TextView
                    android:id="@+id/linkId"
                    android:layout_width="229dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoLink="none|web"
                    android:clickable="true"
                    android:text="@string/textview"
                    android:textColor="@android:color/background_light"
                    android:textColorLink="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_info" />

                <TextView
                    android:id="@+id/informationLabelId"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="@string/information"
                    android:textColor="@android:color/background_light"
                    tools:text="@string/information" />
            </LinearLayout>

            <TextView
                android:id="@+id/informationId"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/information"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                tools:text="Information" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutInformations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</LinearLayout>
